# ophidian

./: .doxygen  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  build_dependencies.sh  index.html  kmeans_object_oriented_design.cpp  kmeans_object_oriented_design.h  params.json  uncrustify.cfg
apps/canvas/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
apps/gui/: CMakeLists.txt  main.cpp
apps/ophidian_gui/: CMakeLists.txt  application.cpp  application.h  dialoglefdef.cpp  dialoglefdef.h  dialoglefdef.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsfmlcanvas.cpp  qsfmlcanvas.h  qsfmlwidget.cpp  qsfmlwidget.h
apps/placement_gui/: CMakeLists.txt  GUI.cpp  GUI.h  application.cpp  application.h  config.h.in  main.cpp  readme.md  render_window.cpp  render_window.h
apps/placement_viewer/: CMakeLists.txt  application.cpp  application.h  circuit.cpp  circuit.h  fps.cpp  fps.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mysfmlcanvas.cpp  mysfmlcanvas.h  open_circuit_dialog.cpp  open_circuit_dialog.h  open_circuit_dialog.ui  placement_viewer.pro  qsfmlcanvas.cpp  qsfmlcanvas.h  resources.cpp  resources.h
apps/uddac2016/: CMakeLists.txt  application.cpp  application.h  canvas.cpp  canvas.h  canvas_controller.cpp  canvas_controller.h  canvas_state.cpp  canvas_state.h  cell_painter.h  controller.cpp  controller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowmenubar.cpp  mainwindowmenubar.h  openlefdefdialog.cpp  openlefdefdialog.h  openlefdefdialog.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  random_purple_cell_painter.cpp  random_purple_cell_painter.h
experiments/: CMakeLists.txt  ISVLSI.cpp  README  astar_colapse_net.cpp  astar_colapse_net.h  astar_moving.cpp  colapse_nets.cpp  date2021.cpp  date21.cpp  date21.h  iccad19.cpp  iccad2020.cpp  main.cpp  main_experiments.cpp  run_ilp.cpp  run_ilp.h  server.cpp  server.h  zmq_client.py
experiments/src/: iccad19.cpp  iccad2020.cpp
ophidian/: CMakeLists.txt  ophidian-config.cmake.in
ophidian/circuit/: CMakeLists.txt  Def2LibraryMapping.cpp  Def2LibraryMapping.h  Def2Netlist.cpp  Def2Netlist.h  LibraryMapping.cpp  LibraryMapping.h  Netlist.cpp  Netlist.h  NetlistFactory.cpp  NetlistFactory.h  StandardCells.cpp  StandardCells.h  StandardCellsFactory.cpp  StandardCellsFactory.h  Verilog2LibraryMapping.cpp  Verilog2LibraryMapping.h  Verilog2Netlist.cpp  Verilog2Netlist.h  VerilogParser.cpp  VerilogParser.h
ophidian/cmake/: package-config.cmake.in
ophidian/design/: CMakeLists.txt  Design.cpp  Design.h  DesignBuilder.cpp  DesignBuilder.h  DesignFactory.cpp  DesignFactory.h  DesignOutput.cpp  DesignOutput.h  design.h
ophidian/entity_system/: Aggregation.h  Association.h  CMakeLists.txt  CTestTestfile.cmake  Composition.cpp  Composition.h  EntitySystem.cpp  EntitySystem.h  Property.cpp  Property.h  aggregation.cpp  aggregation.h  association.cpp  association.h  attached_property.cpp  attached_property.h  composition.cpp  composition.h  entity_system.cpp  entity_system.h  property.cpp  property.h
ophidian/floorplan/: CMakeLists.txt  CTestTestfile.cmake  Floorplan.cpp  Floorplan.h  FloorplanFactory.cpp  FloorplanFactory.h  LefDef2Floorplan.cpp  LefDef2Floorplan.h  Rows.cpp  Rows.h  Sites.cpp  Sites.h
ophidian/geometry/: CMakeLists.txt  CellGeometry.cpp  CellGeometry.h  Distance.cpp  Distance.h  Models.h  MultiBox.h  Operations.h
ophidian/interconnection/: CMakeLists.txt  Flute.cpp  Flute.h  RCTree.cpp  RCTree.h  SteinerTree.cpp  SteinerTree.h  ToEps.h
ophidian/lefdefparser/: CMakeLists.txt  Lef.cpp  Lef.h
ophidian/parser/: AdjacentCutSpacing.cpp  AdjacentCutSpacing.h  CMakeLists.txt  Component.cpp  CornerSpacing.cpp  Def.cpp  Def.h  DefWriter.cpp  DefWriter.h  EndOfLine.cpp  EndOfLine.h  GCell.cpp  GCell.h  Group.cpp  Group.h  GruideWriter.cpp  Guide.cpp  Guide.h  GuideWriter.h  ICCAD2020.cpp  ICCAD2020.h  ICCAD2020Writer.cpp  ICCAD2020Writer.h  Layer.cpp  Layer.h  Lef.cpp  Lef.h  Liberty.cpp  Liberty.h  LibertyParser.cpp  LibertyParser.h  Macro.cpp  Macro.h  Net.cpp  Net.h  Pad.cpp  Pad.h  ParallelRunLength.cpp  ParallelRunLength.h  ParserException.cpp  (+21 more)
ophidian/placement/: CMakeLists.txt  CTestTestfile.cmake  Def2Placement.cpp  Def2Placement.h  FenceRegions.cpp  FenceRegions.h  FenceRegionsFactory.cpp  FenceRegionsFactory.h  Lef2Library.cpp  Lef2Library.h  Library.cpp  Library.h  LibraryFactory.cpp  LibraryFactory.h  Placement.cpp  Placement.h  PlacementFactory.cpp  PlacementFactory.h  PlacementMapping.cpp  PlacementMapping.h
ophidian/routing/: AStarRouting.cpp  AStarRouting.h  CMakeLists.txt  Engine.cpp  Engine.h  GCellGraph.cpp  GCellGraph.h  GlobalRouting.cpp  GlobalRouting.h  GlobalRoutingFactory.cpp  GlobalRoutingFactory.h  ICCAD2020Wrapper.cpp  ICCAD2020Wrapper.h  ILPRouting.cpp  ILPRouting.h  ILPRouting.hpp  Library.cpp  Library.h  LibraryFactory.cpp  LibraryFactory.h  MCFMultiThreading.cpp  MCFMultiThreading.h  MCFRoutingRTree.h  RoutabilityCheck.cpp  RoutabilityCheck.h  RoutingConstraints.cpp  RoutingConstraints.h  RoutingConstraintsFactory.cpp  RoutingConstraintsFactory.h  TimerProfiler.h  json.hpp
ophidian/standard_cell/: CMakeLists.txt  Cells.cpp  Cells.h  StandardCells.cpp  StandardCells.h  StandardCellsFactory.cpp  StandardCellsFactory.h  Standard_Cell.cpp  Standard_Cell.h
ophidian/timing/: CMakeLists.txt  Elmore.cpp  Elmore.h  EndPoints.cpp  EndPoints.h  GenericSTA.cpp  GenericSTA.h  Graph.cpp  Graph.h  Library.cpp  Library.h  LookupTable.cpp  LookupTable.h  OpenTimer.cpp  OpenTimer.h  OpenTimerWrapper.h  SlackCalculation.cpp  SlackCalculation.h  StaticTimingAnalysis.cpp  StaticTimingAnalysis.h  TODO  Timer.cpp  Timer.h  TimingArcs.cpp  TimingArcs.h  TimingCalculation.cpp  TimingCalculation.h  TimingData.cpp  TimingData.h  TimingFactory.h  (+9 more)
ophidian_entity_system/: CMakeLists.txt
regression/: CMakeLists.txt
src/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test/: CMakeLists.txt  dod.cpp  oop.cpp  sta_dod.cpp  sta_oop.cpp  sta_wip.cpp
(+1422 files in other folders)
